# simu

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PlinkRead_bim.m  PlinkRead_binary2.m  README.md  Simulation_pipeline.py  SynGP_inmem.m  chunked_frame_reader.m  find_config.m  generate_inmem.m  generate_inmem_gmm.m  generate_sym01.m  generate_sym02.m  generate_sym03.m  generate_sym04.m  generate_sym05_nold.m  make_beta.m  make_empty_frame.m  make_genofreq.m  make_gmm_beta.m  make_gwas.m  make_gwaslogp.m  make_phenotype.m  make_truebeta_gmm.m  make_truepheno.m  plot_qq.m  reframe.m  run.m  run_polygenic_truepheno_EUR_100K_80M_chunks.m  setup.sh  tutorial.m
c/: Makefile  source.c  source.cc
libplinkio/src/: bed.c
libplinkio/src/plinkio/: bed.h
matlab/: Simulation_pipeline.py  chunks_EUR.txt  chunks_EUR_noMHC.txt  exclude_snps.txt  generate_inmem_gmm.m  generate_sym01.m  generate_sym02.m  keep_and_extract.py  make_hapgen.py  make_truepheno.m  merged_frame_reader.m  reframe.m  remove_dups_100K_rep10.sh  run.m  test_2017_02_15.m
src/: CMakeLists.txt  source.cc
